// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavbar renders correctly 1`] = `
<button
  class="navbar-toggler"
  type="button"
>
  <span
    class="navbar-toggler-icon"
  />
</button>
`;

exports[`CNavbar renders correctly 2`] = `
<button
  class="navbar-toggler"
  fill="true"
  justified="true"
  pills="true"
  type="button"
  vertical="true"
>
  CNavbar items
</button>
`;
